# internal/router/router.go
@@ -238,20 +238,12 @@ func RegisterDataRoutes(r *gin.RouterGroup, handler *handler.DataHandler) {
 	r.GET("/data/assay/list-by-project", handler.ListAssayByProjectID)
 	r.POST("/data/assay/list-by-project-page", handler.PageAssayByProjectID)
 
-	r.POST("/data/dataset-subject/create", handler.CreateDatasetSubject)
-	r.GET("/data/dataset-subject/get", handler.GetDatasetSubject)
-	r.GET("/data/dataset-subject/get-by-subject", handler.GetDatasetSubjectBySubjectID)
-	r.POST("/data/dataset-subject/update", handler.UpdateDatasetSubject)
-	r.POST("/data/dataset-subject/delete", handler.DeleteDatasetSubject)
-	r.GET("/data/dataset-subject/list", handler.ListDatasetSubject)
-
-	r.POST("/data/subject/create", handler.CreateSubject)
-	r.GET("/data/subject/get", handler.GetSubject)
-	r.POST("/data/subject/update", handler.UpdateSubject)
-	r.POST("/data/subject/delete", handler.DeleteSubject)
-	r.GET("/data/subject/list", handler.ListSubject)
-	r.GET("/data/subject/list-by-project", handler.ListSubjectByProjectID)
-	r.POST("/data/subject/page", handler.PageSubject)
+	r.POST("/data/dataset-sample/create", handler.CreateDatasetSample)
+	r.GET("/data/dataset-sample/get", handler.GetDatasetSample)
+	r.GET("/data/dataset-sample/get-by-sample", handler.GetDatasetSampleBySampleID)
+	r.POST("/data/dataset-sample/update", handler.UpdateDatasetSample)
+	r.POST("/data/dataset-sample/delete", handler.DeleteDatasetSample)
+	r.GET("/data/dataset-sample/list", handler.ListDatasetSample)
 
 	r.POST("/data/sample/create", handler.CreateSample)
 	r.GET("/data/sample/get", handler.GetSample)
